--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
+<!-- Hexa Voice Assistant - English Default Language -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="language" content="en" />
+    <meta name="locale" content="en_US" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Hexa</title>
   </head>
